--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
       
       - name: Install dependencies
         run: |
+          pip install class-widgets-sdk
           pip install -e .
       
       - name: Build plugin packages
