--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ dependencies = ["class-widgets-sdk"]
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+exclude = ["qml", "previews"]
